--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;800&family=RocknRoll+One&display=swap");
 *,
 *::after,
 *::before {
@@ -5,24 +6,13 @@
   margin: 0;
   box-sizing: border-box;
   text-decoration: none;
+  font-family: "Poppins", sans-serif;
 }
+
 body {
   background-color: rgb(55, 65, 81) !important;
 }
-
-.grid-search {
-  display: grid;
-  gap: 1.5rem;
-  grid-template-areas:
-    "anime char"
-    "anime manga";
-}
-.grid-anime {
-  grid-area: anime;
-}
-.grid-char {
-  grid-area: char;
-}
-.grid-manga {
-  grid-area: manga;
+.fontRockNRoll {
+  font-family: "RocknRoll One", sans-serif !important;
+  text-shadow: 2px 2px 3px rgb(149, 128, 106);
 }
